# pkg/api/user.go
@@ -2,12 +2,17 @@ package api
 
 import (
 	"context"
+	"encoding/json"
 	"errors"
 	"fmt"
 	"golang-rest-api-template/pkg/auth"
+	"golang-rest-api-template/pkg/cache"
 	"golang-rest-api-template/pkg/database"
 	"golang-rest-api-template/pkg/models"
 	"golang-rest-api-template/pkg/response"
+	"strconv"
+	"time"
+
 	"gorm.io/gorm"
 
 	"github.com/gin-gonic/gin"
@@ -17,18 +22,21 @@ import (
 type UserRepository interface {
 	LoginHandler(c *gin.Context)
 	RegisterHandler(c *gin.Context)
+	FindUsers(c *gin.Context)
 }
 
-// bookRepository holds shared resources like database and Redis client
+// userRepository holds shared resources like database and Redis client
 type userRepository struct {
-	DB  database.Database
-	Ctx *context.Context
+	DB          database.Database
+	RedisClient cache.Cache
+	Ctx         *context.Context
 }
 
-func NewUserRepository(db database.Database, ctx *context.Context) *userRepository {
+func NewUserRepository(db database.Database, redisClient cache.Cache, ctx *context.Context) *userRepository {
 	return &userRepository{
-		DB:  db,
-		Ctx: ctx,
+		DB:          db,
+		RedisClient: redisClient,
+		Ctx:         ctx,
 	}
 }
 
@@ -122,4 +130,76 @@ func (r *userRepository) RegisterHandler(c *gin.Context) {
 	}
 
 	response.SuccessWithMessage(c, gin.H{"id": newUser.ID, "username": newUser.Username}, "Registration successful")
+}
+
+// FindUsers godoc
+// @Summary Get all users with pagination
+// @Description Get a list of all users with optional pagination
+// @Tags user
+// @Security ApiKeyAuth
+// @Produce json
+// @Param offset query int false "Offset for pagination" default(0)
+// @Param limit query int false "Limit for pagination" default(10)
+// @Success 200 {array} models.User "Successfully retrieved list of users"
+// @Router /users [get]
+func (r *userRepository) FindUsers(c *gin.Context) {
+	var users []models.User
+
+	// Get query params
+	offsetQuery := c.DefaultQuery("offset", "0")
+	limitQuery := c.DefaultQuery("limit", "10")
+
+	// Convert query params to integers
+	offset, err := strconv.Atoi(offsetQuery)
+	if err != nil {
+		response.BadRequest(c, "Invalid offset format")
+		return
+	}
+
+	limit, err := strconv.Atoi(limitQuery)
+	if err != nil {
+		response.BadRequest(c, "Invalid limit format")
+		return
+	}
+
+	// Create a cache key based on query params
+	cacheKey := "users_offset_" + offsetQuery + "_limit_" + limitQuery
+
+	// Try fetching the data from Redis first
+	cachedUsers, err := r.RedisClient.Get(*r.Ctx, cacheKey).Result()
+	if err == nil {
+		err := json.Unmarshal([]byte(cachedUsers), &users)
+		if err != nil {
+			response.InternalServerError(c, "Failed to unmarshal cached data")
+			return
+		}
+		// Remove password from cached data before returning
+		for i := range users {
+			users[i].Password = ""
+		}
+		response.Success(c, users)
+		return
+	}
+
+	// If cache missed, fetch data from the database
+	r.DB.Offset(offset).Limit(limit).Find(&users)
+
+	// Remove passwords from response for security
+	for i := range users {
+		users[i].Password = ""
+	}
+
+	// Serialize users object and store it in Redis
+	serializedUsers, err := json.Marshal(users)
+	if err != nil {
+		response.InternalServerError(c, "Failed to marshal data")
+		return
+	}
+	err = r.RedisClient.Set(*r.Ctx, cacheKey, serializedUsers, time.Minute).Err()
+	if err != nil {
+		response.InternalServerError(c, "Failed to set cache")
+		return
+	}
+
+	response.Success(c, users)
 }
